[package]
name = "telates"
version = "0.1.0"
authors = ["name <email>"]
edition = "2018"

[dependencies]
teloxide = { git = "https://github.com/teloxide/teloxide", branch = "dev", features = ["redis-storage", "bincode-serializer"], commit = "fe6429c2" }
teloxide-macros = { git = "https://github.com/teloxide/teloxide-macros", branch = "master" }
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "0.2.11", features = ["full"] }
serde = "1.0.104"
futures = "0.3.5"
chrono = { version = "0.4", features = ["serde"] }
url = "2.2.0"
thiserror = "1.0.15"
derive_more = "0.99.9"
rss = { version = "1.10.0", features = ["validation"] }
reqwest = { version = "0.11.0", features = ["blocking"] }
regex = "1.4.3"
bytes = "1.0.1"
redis = "0.19.0"
bincode = "1.3.1"
serde-redis = "0.10.0"
